# geopapyrus

./: Cargo.toml  Makefile  README.md  geopapyrus.pyi  pyproject.toml
pytests/: test_distance.py
src/: lib.rs
src/core/: distance.rs  distance_test.rs
tests/: distance.rs
